Alteração Feita ex1

--- a/ex1.html
+++ b/ex1.html
@@ -10,7 +10,7 @@
     <!-- Título da página -->
     <h2>Calculadora Simples</h2>
 
-    <h1>Primeira alteração github</h1>
+    <h1>Primeira alteração github , segunda alteração</h1>
     
     <!-- Formulário para entrada dos números -->
     <form method="" action="">
